Class + demo fix

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -13,7 +13,7 @@
 <body onload="runApp();">
     <h1>Digital Clock</h1>
     <h2>This is font for using in digital clock</h2>
-    <p>Git:</p>
+    <p>Git: <a href="https://github.com/rom-melnyk/digital-clock">https://github.com/rom-melnyk/digital-clock</a></p>
     <h2>Demo</h2>
     <p>
         <input type="radio" name="mode" id="mode-random" value="random" checked>
