CSS variables support added

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -27,6 +27,13 @@
 
         <input type="text" id="user-input" placeholder="Your text...">
     </p>
+    <p>
+        <input type="range" min="1" max="10" value="5" id="font-size">
+        <label for="font-size">font size</label>
+
+        <input type="color" value="#000" id="color">
+        <label for="color">color</label>
+    </p>
     <div class="digital-clock"></div>
 </body>
 </html>
